gccida/c0/get_true_reg
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_true_reg/src/reg-stack.c:1051:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)subreg), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_true_reg/src/reg-stack.c:1051:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)subreg), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_true_reg/src/reg-stack.c:1053:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)*pat))] 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_true_reg/src/reg-stack.c:1053:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)*pat))] 
                 ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_true_reg/src/obj/reg-stack.o] Error 1
